--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-hellow
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="refresh" content="0; url=https://tzur669-lab.github.io/MoneyTime/">
+    <script type="text/javascript">
+        window.location.href = "https://tzur669-lab.github.io/MoneyTime/"
+    </script>
+    <title>Redirecting...</title>
+</head>
+<body>
+    אם לא הועברת אוטומטית, <a href="https://tzur669-lab.github.io/MoneyTime/">לחץ כאן</a>.
+</body>
+</html>
